--- a/Share Beauty App/Base.lproj/OnTrendViewController.storyboard
+++ b/Share Beauty App/Base.lproj/OnTrendViewController.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="ipad9_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -29,14 +29,11 @@
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Shiseido's latest" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vaW-MI-h5G">
                                 <rect key="frame" x="70" y="60" width="376" height="58"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="376" id="Ck9-7h-Mq7"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="48"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="and greatest." lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R7F-Q0-LPN">
-                                <rect key="frame" x="70" y="113" width="301.5" height="58"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="48"/>
-                                <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GCT-Vd-lqa" customClass="PagingProductView" customModule="Share_Beauty_App" customModuleProvider="target">
@@ -60,12 +57,11 @@
                             <constraint firstItem="mlu-1A-bfx" firstAttribute="top" secondItem="GCT-Vd-lqa" secondAttribute="bottom" id="Gtu-hL-12D"/>
                             <constraint firstItem="vaW-MI-h5G" firstAttribute="top" secondItem="CDb-1x-bN6" secondAttribute="bottom" constant="40" id="JoS-sR-KNM"/>
                             <constraint firstItem="GCT-Vd-lqa" firstAttribute="leading" secondItem="U0Z-Ee-WED" secondAttribute="leading" constant="45" id="Vk0-lo-ZJE"/>
-                            <constraint firstItem="R7F-Q0-LPN" firstAttribute="top" secondItem="vaW-MI-h5G" secondAttribute="bottom" constant="-5" id="hIF-vX-Uii"/>
-                            <constraint firstItem="R7F-Q0-LPN" firstAttribute="leading" secondItem="U0Z-Ee-WED" secondAttribute="leadingMargin" constant="50" id="ibw-ih-aS5"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="mPagingProductV" destination="GCT-Vd-lqa" id="d59-1g-JE3"/>
+                        <outlet property="titleLabel" destination="vaW-MI-h5G" id="kCk-v1-FA9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fNo-wi-cTJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
