--- a/Share Beauty App/Views/LifeStyleProductView.xib
+++ b/Share Beauty App/Views/LifeStyleProductView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -81,7 +81,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="0.0" translatesAutoresizingMaskIntoConstraints="NO" id="lER-fl-Fe8">
-                                            <rect key="frame" x="0.0" y="5" width="255" height="0.0"/>
+                                            <rect key="frame" x="0.0" y="5" width="225" height="0.0"/>
                                             <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="16"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -95,7 +95,7 @@
                                         <constraint firstAttribute="height" constant="96" id="hqY-Sw-5sd"/>
                                         <constraint firstItem="lER-fl-Fe8" firstAttribute="top" secondItem="bvW-oP-OQX" secondAttribute="bottom" constant="5" id="q2P-x9-RXf"/>
                                         <constraint firstAttribute="trailing" secondItem="ZIB-zZ-j3t" secondAttribute="trailing" id="sce-Rc-nDb"/>
-                                        <constraint firstAttribute="trailing" secondItem="lER-fl-Fe8" secondAttribute="trailing" id="ufn-MP-NIa"/>
+                                        <constraint firstAttribute="trailing" secondItem="lER-fl-Fe8" secondAttribute="trailing" constant="30" id="ufn-MP-NIa"/>
                                         <constraint firstAttribute="trailing" secondItem="bvW-oP-OQX" secondAttribute="trailing" constant="4" id="vnJ-Fo-9o3"/>
                                         <constraint firstItem="bvW-oP-OQX" firstAttribute="top" secondItem="ZIB-zZ-j3t" secondAttribute="bottom" id="wR0-pb-L7M"/>
                                     </constraints>
