--- a/Share Beauty App/Base.lproj/ProductDetailViewController.storyboard
+++ b/Share Beauty App/Base.lproj/ProductDetailViewController.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="ipad9_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -28,10 +28,10 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" maximumZoomScale="3" translatesAutoresizingMaskIntoConstraints="NO" id="wAl-8s-SCs">
-                                <rect key="frame" x="0.0" y="10" width="1024" height="758"/>
+                                <rect key="frame" x="0.0" y="30" width="1024" height="738"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fmO-Po-Pdd">
-                                        <rect key="frame" x="0.0" y="0.0" width="1024" height="758"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="1024" height="738"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2HQ-dQ-aof">
                                                 <rect key="frame" x="0.0" y="0.0" width="1024" height="35"/>
@@ -192,13 +192,13 @@
                                                 </variation>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Hn-Nw-AoF">
-                                                <rect key="frame" x="0.0" y="45" width="1024" height="633"/>
+                                                <rect key="frame" x="0.0" y="45" width="1024" height="613"/>
                                                 <subviews>
                                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7zV-jj-qdq">
-                                                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="1024" height="748"/>
                                                     </imageView>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hrs-Nf-pIZ">
-                                                        <rect key="frame" x="0.0" y="0.0" width="348" height="623"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="348" height="603"/>
                                                         <subviews>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fyx-6Y-B1b">
                                                                 <rect key="frame" x="20" y="0.0" width="328" height="76"/>
@@ -236,15 +236,15 @@
                                                                 </constraints>
                                                             </view>
                                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="H4D-Kx-hbY">
-                                                                <rect key="frame" x="0.0" y="76" width="348" height="447"/>
+                                                                <rect key="frame" x="0.0" y="76" width="348" height="427"/>
                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                             </imageView>
                                                             <view contentMode="scaleToFill" placeholderIntrinsicWidth="328" placeholderIntrinsicHeight="100" translatesAutoresizingMaskIntoConstraints="NO" id="qP3-J2-RYj" customClass="ProductDetailTransitionView" customModule="Share_Beauty_App" customModuleProvider="target">
-                                                                <rect key="frame" x="10" y="523" width="328" height="100"/>
+                                                                <rect key="frame" x="10" y="503" width="328" height="100"/>
                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                             </view>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wx1-mu-ifn">
-                                                                <rect key="frame" x="0.0" y="235" width="60" height="129"/>
+                                                                <rect key="frame" x="0.0" y="225" width="60" height="129"/>
                                                                 <subviews>
                                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i0h-jN-b85" customClass="BaseButton" customModule="Share_Beauty_App" customModuleProvider="target">
                                                                         <rect key="frame" x="0.0" y="0.0" width="60" height="43"/>
@@ -304,10 +304,10 @@
                                                         </constraints>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cRh-dU-sP7">
-                                                        <rect key="frame" x="368" y="0.0" width="636" height="633"/>
+                                                        <rect key="frame" x="368" y="0.0" width="636" height="613"/>
                                                         <subviews>
                                                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="T1L-hn-13t">
-                                                                <rect key="frame" x="0.0" y="0.0" width="636" height="633"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="636" height="613"/>
                                                                 <subviews>
                                                                     <view clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6m6-Dv-mB3">
                                                                         <rect key="frame" x="0.0" y="0.0" width="636" height="1000"/>
@@ -617,13 +617,13 @@
                                                                 </constraints>
                                                             </scrollView>
                                                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bo5-Zj-qlz">
-                                                                <rect key="frame" x="0.0" y="0.0" width="636" height="633"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="636" height="613"/>
                                                                 <subviews>
                                                                     <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" directionalLockEnabled="YES" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="A45-Uu-aiv">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="636" height="633"/>
+                                                                        <rect key="frame" x="0.0" y="0.0" width="636" height="613"/>
                                                                         <subviews>
                                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yHV-lG-PXe">
-                                                                                <rect key="frame" x="0.0" y="0.0" width="636" height="633"/>
+                                                                                <rect key="frame" x="0.0" y="0.0" width="636" height="613"/>
                                                                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                             </view>
                                                                         </subviews>
@@ -659,7 +659,7 @@
                                                         </constraints>
                                                     </view>
                                                     <view hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eQA-cW-fKQ">
-                                                        <rect key="frame" x="0.0" y="0.0" width="1024" height="633"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="1024" height="613"/>
                                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="535" id="ioa-FJ-CKv"/>
@@ -692,7 +692,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lqj-6e-0a8">
-                                                <rect key="frame" x="0.0" y="678" width="1024" height="80"/>
+                                                <rect key="frame" x="0.0" y="658" width="1024" height="80"/>
                                                 <subviews>
                                                     <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IJq-sz-snI">
                                                         <rect key="frame" x="0.0" y="1" width="1024" height="79"/>
@@ -760,7 +760,7 @@
                                 </constraints>
                             </scrollView>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RQE-Q2-05k" customClass="TroubleView" customModule="Share_Beauty_App" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                                <rect key="frame" x="0.0" y="20" width="1024" height="748"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </view>
                         </subviews>
