--- a/Share Beauty App/Views/Gsc/GscHeaderView.xib
+++ b/Share Beauty App/Views/Gsc/GscHeaderView.xib
@@ -1,13 +1,21 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="HelveticaNeue.ttc">
+            <string>HelveticaNeue</string>
+        </array>
+        <array key="Optima.ttc">
+            <string>Optima-Bold</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GscHeaderView" customModule="Share_Beauty_App" customModuleProvider="target">
             <connections>
@@ -52,6 +60,7 @@
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="buO-mN-OMb" customClass="BaseButton" customModule="Share_Beauty_App" customModuleProvider="target">
                     <rect key="frame" x="8" y="7" width="29" height="29"/>
+                    <gestureRecognizers/>
                     <constraints>
                         <constraint firstAttribute="height" constant="29" id="PTX-W0-w1Q"/>
                         <constraint firstAttribute="width" constant="29" id="hYa-7r-HX2"/>
@@ -62,10 +71,12 @@
                     </state>
                     <connections>
                         <action selector="onTapHome:" destination="-1" eventType="touchUpInside" id="pdW-F8-Zet"/>
+                        <outletCollection property="gestureRecognizers" destination="mrP-eC-22U" appends="YES" id="Xmp-Bv-MHt"/>
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sqm-fp-hlP" customClass="BaseButton" customModule="Share_Beauty_App" customModuleProvider="target">
                     <rect key="frame" x="45" y="6" width="350" height="30"/>
+                    <gestureRecognizers/>
                     <constraints>
                         <constraint firstAttribute="width" constant="350" id="ZOb-BM-ulW"/>
                         <constraint firstAttribute="height" constant="30" id="nw9-dh-9w9"/>
@@ -135,6 +146,11 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="203" y="-159"/>
         </view>
+        <pongPressGestureRecognizer allowableMovement="10" minimumPressDuration="0.5" id="mrP-eC-22U">
+            <connections>
+                <action selector="pressHome:" destination="-1" id="PHn-re-78c"/>
+            </connections>
+        </pongPressGestureRecognizer>
     </objects>
     <resources>
         <image name="button_update" width="20" height="20"/>
